<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
<!-- wifi -->
   <LinearLayout
		android:id="@+id/wifi_layout"
		android:layout_width="fill_parent"
		android:layout_height="50dip"
		android:orientation="horizontal"
		>
	<LinearLayout
		android:layout_width="0dip"
		android:layout_height="50dip"
		android:orientation="vertical"
		android:layout_weight="1"
		>
	<TextView
		android:id="@+id/wifi_tv"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/setting_wifi_txt"
		android:textSize="20sp"
		/>
	<TextView
		android:id="@+id/wifi_summary_tv"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/setting_wifi_summary_txt"
		android:textSize="13sp"
		/>
	</LinearLayout>
	<Spinner
		android:id="@+id/wifi_spinner"
		android:layout_width="0dip"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		/>
	</LinearLayout>        
	
	<View 
  		android:layout_width="fill_parent"
		android:layout_height="3dip"  
		android:background="@android:color/white"
	/>
<!-- Alram -->
   <LinearLayout
		android:id="@+id/alram_layout"
		android:layout_width="fill_parent"
		android:layout_height="50dip"
		android:orientation="horizontal"
		>
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="50dip"
		android:orientation="vertical"
		android:layout_weight="1"
		>
	<TextView
		android:id="@+id/alram_tv"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/setting_alarm_txt"
		android:textSize="20sp"
		/>
	<TextView
		android:id="@+id/alram_summary_tv"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/setting_alarm_summary_txt"
		android:textSize="13sp"
		/>
	</LinearLayout>      
	</LinearLayout>      
   
   	<View 
  		android:layout_width="fill_parent"
		android:layout_height="3dip"  
		android:background="@android:color/white"
	/>
   
<!-- sound -->
   <LinearLayout
		android:id="@+id/sound_layout"
		android:layout_width="fill_parent"
		android:layout_height="50dip"
		android:orientation="horizontal"
		>
	<LinearLayout
		android:layout_width="0dip"
		android:layout_height="50dip"
		android:orientation="vertical"
		android:layout_weight="1"
		>
	<TextView
		android:id="@+id/sound_tv"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/setting_sound_txt"
		android:textSize="20sp"
		/>
	<TextView
		android:id="@+id/sound_summary_tv"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/setting_sound_summary_txt"
		android:textSize="13sp"
		/>
	</LinearLayout>
	<ToggleButton
		android:id="@+id/sound_togglebtn"
		android:layout_width="0dip"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		/>
	</LinearLayout>
	<View 
  		android:layout_width="fill_parent"
		android:layout_height="3dip"  
		android:background="@android:color/white"
	/>
	
	
<!-- vibrate -->
   <LinearLayout
		android:id="@+id/vibrate_layout"
		android:layout_width="fill_parent"
		android:layout_height="50dip"
		android:orientation="horizontal"
		>
	<LinearLayout
		android:layout_width="0dip"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:layout_weight="1"
		>
	<TextView
		android:id="@+id/vibrate_tv"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/setting_vibrate_txt"
		android:textSize="20sp"
		/>
	<TextView
		android:id="@+id/vibrate_summary_tv"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/setting_vibrate_summary_txt"
		android:textSize="13sp"
		/>
	</LinearLayout>
	<ToggleButton
		android:id="@+id/vibrate_togglebtn"
		android:layout_width="0dip"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		/>
	</LinearLayout>    
	
 	<View 
  		android:layout_width="fill_parent"
		android:layout_height="3dip"  
		android:background="@android:color/white"
	/>
	
<!-- Help -->
   <LinearLayout
		android:id="@+id/help_layout"
		android:layout_width="fill_parent"
		android:layout_height="50dip"
		android:orientation="horizontal"
		>
	<LinearLayout
		android:layout_width="0dip"
		android:layout_height="50dip"
		android:orientation="vertical"
		android:layout_weight="1"
		>
	<TextView
		android:id="@+id/help_tv"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/setting_help_txt"
		android:textSize="20sp"
		/>
	<TextView
		android:id="@+id/help_summary_tv"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/setting_help_summary_txt"
		android:textSize="13sp"
		/>
	</LinearLayout>
	</LinearLayout>    
	
	<View 
  		android:layout_width="fill_parent"
		android:layout_height="3dip"  
		android:background="@android:color/white"
	/>
   
<!-- version Info -->
   <LinearLayout
		android:id="@+id/version_layout"
		android:layout_width="fill_parent"
		android:layout_height="50dip"
		android:orientation="horizontal">
	<LinearLayout
		android:layout_width="0dip"
		android:layout_height="50dip"
		android:orientation="vertical"
		android:layout_weight="1"
		>
	<TextView
		android:id="@+id/version_tv"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/setting_version_txt"
		android:textSize="20sp"
		/>
	<TextView
		android:id="@+id/version_summary_tv"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/setting_version_summary_txt"
		android:textSize="13sp"
		/>
	</LinearLayout>
	</LinearLayout> 
   	<View 
  		android:layout_width="fill_parent"
		android:layout_height="3dip"  
		android:background="@android:color/white"
	/>
</LinearLayout>